css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  box-sizing: border-box;
  font: normal 100%/1.3 sans-serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  padding: 0;
  margin: 0;
  font-family: sans-serif;
}

main {
  background-color: #e2e2e2;
}

.img-section {
  padding: 1rem;
  display: flex;
  flex-direction: column;
  position: relative;
  max-width: 50em;
}

.content {
  padding: 2rem 0;
}

h1 {
  padding: 0 0 1rem;
  margin: 0;
}

strong {
  padding: 0;
  margin: 0;
}

p {
  padding: 0;
  margin: 0 0 1rem;
}

.btn {
  display: inline-block;
  margin: 0;
  padding: 0.5em 0.75em;
  background-color: #555;
  border-radius: 4px;
  color: #fff;
  text-decoration: none;
  text-align: center;
  line-height: 1.85;
}

.btn:hover {
  background-color: #000;
}

img {
  width: 100%;
}

.img-flex {
  margin: 0;
  width: 100%;
}

@media only screen and (min-width: 25em) {

}

@media only screen and (min-width: 38em) {

  html {
    font-size: 110%;
    line-height: 1.4;
  }

  .img-section {
    flex-direction: row;
    align-items: center;
  }

  .content {
    padding-right: 1rem;
    max-width: 50%;
  }

  .img-flex {
    margin-left: 1rem;
    align-items: center;
    max-width: 50%;
  }

@media only screen and (min-width: 60em) {

  html {
    font-size: 120%;
    line-height: 1.5;
  }

  .img-section {
    padding: 2rem 1rem;
  }

  img {
    padding: 1rem 0;
  }

@media only screen and (min-width: 90em) {

  html {
    font-size: 130%;
  }

}

